--- a/index.html
+++ b/index.html
@@ -413,58 +413,19 @@ JotForm.paymentExtrasOnTheFly([null,null,null,null,null,null,null,null,null,null
   <div id="formCoverLogo" style="margin-bottom:32px" class="form-cover-wrapper form-has-cover form-page-cover-image-align-center">
     <div class="form-page-cover-image-wrapper" style="max-width:752px"><img src="https://www.jotform.com/uploads/kfcmongolia3/form_files/KFC.672dc9a353b5a7.51150865.png" class="form-page-cover-image" width="110" height="110" aria-label="Form Logo" style="aspect-ratio:110/110" /></div>
   </div>
-  <div role="main" class="form-all">
-    <ul class="form-section page-section">
-      <li id="cid_30" class="form-input-wide" data-type="control_head">
-        <div class="form-header-group  header-large">
-          <div class="header-text httac htvam">
-            <h1 id="header_30" class="form-header" data-component="header">Хүсэл биелүүлэх хүслийн багц</h1>
-            <div id="subHeader_30" class="form-subHeader">Хүслийн багцаа амтлаад хүссэн бэлгээ хожоорой</div>
-          </div>
-        </div>
-      </li>
-      <li class="form-line" data-type="control_image" id="id_29">
-        <div id="cid_29" class="form-input-wide" data-layout="full">
-          <div style="text-align:center" aria-hidden="true" role="none"><img alt="Image-29" loading="lazy" class="form-image" style="border:0" src="https://www.jotform.com/uploads/kfcmongolia3/form_files/Wish.6735a02caaf8e8.77350405.webp" height="600px" width="600px" data-component="image" role="none" aria-hidden="true" tabindex="-1" /></div>
-        </div>
-      </li>
-      <li class="form-line jf-required" data-type="control_textbox" id="id_22"><label class="form-label form-label-top form-label-auto" id="label_22" for="input_22" aria-hidden="false"> Ebarimt сугалааны дугаар<span class="form-required">*</span> </label>
-        <div id="cid_22" class="form-input-wide jf-required" data-layout="half"> <span class="form-sub-label-container" style="vertical-align:top"><input type="text" id="input_22" name="q22_ebarimt" data-type="input-textbox" class="form-textbox validate[required]" data-defaultvalue="" style="width:310px" size="310" data-component="textbox" aria-labelledby="label_22 sublabel_input_22" required="" value="" /><label class="form-sub-label" for="input_22" id="sublabel_input_22" style="min-height:13px">И-баримтын дугаараа оруулна уу.</label></span> </div>
-      </li>
-      <li class="form-line" data-type="control_textbox" id="id_24"><label class="form-label form-label-top form-label-auto" id="label_24" for="input_24" aria-hidden="false"> Таны овог нэр </label>
-        <div id="cid_24" class="form-input-wide" data-layout="half"> <span class="form-sub-label-container" style="vertical-align:top"><input type="text" id="input_24" name="q24_input24" data-type="input-textbox" class="form-textbox" data-defaultvalue="" style="width:310px" size="310" data-component="textbox" aria-labelledby="label_24 sublabel_input_24" value="" /><label class="form-sub-label" for="input_24" id="sublabel_input_24" style="min-height:13px">Латин үсгээр бичнэ үү.</label></span> </div>
-      </li>
-      <li class="form-line jf-required" data-type="control_phone" id="id_25"><label class="form-label form-label-top form-label-auto" id="label_25" for="input_25_full"> Утасны дугаар<span class="form-required">*</span> </label>
-        <div id="cid_25" class="form-input-wide jf-required" data-layout="half"> <span class="form-sub-label-container" style="vertical-align:top"><input type="tel" id="input_25_full" name="q25_input25[full]" data-type="mask-number" class="mask-phone-number form-textbox validate[required, Fill Mask]" data-defaultvalue="" autoComplete="section-input_25 tel-local" style="width:310px" data-masked="true" placeholder="0000-0000" data-component="phone" aria-labelledby="label_25 sublabel_25_masked" required="" value="" /><label class="form-sub-label" for="input_25_full" id="sublabel_25_masked" style="min-height:13px">Утасны дугаараа оруулна уу.</label></span> </div>
-      </li>
-      <li class="form-line jf-required" data-type="control_fileupload" id="id_17"><label class="form-label form-label-top form-label-auto" id="label_17" for="input_17" aria-hidden="false"> Баримтны бодит зураг оруулах<span class="form-required">*</span> </label>
-        <div id="cid_17" class="form-input-wide jf-required" data-layout="full">
-          <div class="jfQuestion-fields" data-wrapper-react="true">
-            <div class="jfField isFilled">
-              <div class="jfUpload-wrapper">
-                <div class="jfUpload-container">
-                  <div class="jfUpload-button-container">
-                    <div class="jfUpload-button" aria-hidden="true" tabindex="0" style="display:none" data-version="v2">Зураг оруулах<div class="jfUpload-heading forDesktop">Drag and drop files here</div>
-                      <div class="jfUpload-heading forMobile">Choose a file</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="jfUpload-files-container">
-                  <div class="validate[multipleUpload]"><input type="file" id="input_17" name="q17_input17[]" multiple="" class="form-upload-multiple validate[required]" data-imagevalidate="yes" data-file-accept="pdf, doc, docx, xls, xlsx, csv, txt, rtf, html, zip, mp3, wma, mpg, flv, avi, jpg, jpeg, png, gif" data-limit-file-size="Yes" data-file-maxsize="10854" data-file-minsize="0" data-file-limit="" data-component="fileupload" required="" aria-label="Зураг оруулах" /></div>
-                </div>
-              </div><span class="form-sub-label-container" style="vertical-align:top"><label class="form-sub-label" for="input_17" id="sublabel_input_17" style="min-height:13px">Зураг сонгоно уу</label></span>
-            </div><span style="display:none" class="cancelText">Cancel</span><span style="display:none" class="ofText">of</span>
-          </div>
-        </div>
-      </li>
-      <li class="form-line" data-type="control_button" id="id_28">
-        <div id="cid_28" class="form-input-wide" data-layout="full">
-          <div data-align="auto" class="form-buttons-wrapper form-buttons-auto   jsTest-button-wrapperField"><button id="input_28" type="submit" class="form-submit-button form-submit-button-red-500 submit-button jf-form-buttons jsTest-submitField legacy-submit" data-component="button" data-content="">Илгээх</button></div>
-        </div>
-      </li>
-      <li style="display:none">Should be Empty: <input type="text" name="website" value="" type="hidden" /></li>
-    </ul>
-  </div>
+  
+<style>
+h2 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+a:link {
+  color: red;
+}
+
+</style>
+<h2> Азтан тодруулах live <a href="https://www.facebook.com/KFC.Mongolia"> үзэх</a></h2>
+    
+    
   <script>
     JotForm.showJotFormPowered = "0";
   </script>
